--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "zafir-professional-catalogue",
   "private": true,
   "version": "1.0.0",
+  "homepage": "https://zaf24.github.io/Zafir-Professional-Website",
   "type": "module",
   "scripts": {
     "dev": "vite",
