ci(pages-branch): add .nojekyll in dist to prevent Jekyll processing

--- a/.github/workflows/deploy-branch.yml
+++ b/.github/workflows/deploy-branch.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Build
         run: bun run build
+      - name: Disable Jekyll
+        run: echo "" > dist/.nojekyll
 
       - name: Publish dist to docs/ on main
         uses: JamesIves/github-pages-deploy-action@v4
